Feature/testcases (#5)
* Final Commit

* Added Authenticatation using JWT

* Auth Final Commit

* Testcase Added
